--- a/aula04/index.html
+++ b/aula04/index.html
@@ -12,6 +12,7 @@
     <main>
         <section>
             <form class="formulario" action="">
+
                 <div class="itemForm">
                     <label for="nome">Nome: </label>
                     <input type="text" id="nome" name="nome" required>
@@ -42,7 +43,9 @@
                     <div class="erro" id="erroData"></div>
                 </div>
 
-                <button type="submit">Enviar</button>
+                <div>
+                    <button type="submit">Enviar</button>
+                </div>
             </form>
         </section>
     </main>
