--- a/aula02/aula2.html
+++ b/aula02/aula2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="style02.css">
+    <link rel="stylesheet" href="/aula02/style02.css">
 
     <title>Aula 02 | Java Script - Calculadora de Média de Alunos</title>
 </head>
@@ -23,7 +23,7 @@
     <input type="number" id="nota3" name="nota3"><br>
 
     <button onclick="calcularMedia()">Calcular</button>
-
+   
     <p>A média dos alunos é: <span id="media"></span></p>
     <p>Nota do Exame: <span id="notaExame"></span></p>
     <p>Situação: <span id="situacao"></span></p>
@@ -31,7 +31,7 @@
     <button type="reset">Limpar</button>
     
 
-<script src="/script02.js"></script>
+<script src="/aula02/script02.js"></script>
     
 </body>
 </html>
