--- a/aula06/teste3.html
+++ b/aula06/teste3.html
@@ -6,11 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    // 1 declare uma variavel chamada frutas e atribua a ela um array de frutas
-    // 2 declare uma função chamada lista de frutas que imprime todas as frutas
-    //3 chame a função lista de frutas
-    // 4 adicione novas frutas no array
-    // chame a função frutas novamente
+    1 declare uma variavel chamada frutas e atribua a ela um array de frutas <br>
+    2 declare uma função chamada lista de frutas que imprime todas as frutas <br>
+    3 chame a função lista de frutas <br>
+    4 adicione novas frutas no array <br>
+    5 chame a função frutas novamente <br>
+
+
     <script>
 
         let frutas = ["banana", "laranja", "kiwi"];
@@ -20,7 +22,7 @@
             }
         }
         listaDeFrutas();
-        frutas.push("figo");
+        frutas.push("figo", "abacaxi");
 
         listaDeFrutas();
 
