--- a/aula04/index.html
+++ b/aula04/index.html
@@ -51,6 +51,6 @@
     </main>
     <footer></footer>
 
-<script src="/aula04/script.js"></script>
+<script src="/aula04/script2.js"></script>
 </body>
 </html>
